2005-02-10  Bruno Haible  <bruno@clisp.org>

	* windows/gettextpo.def: Add po_message_remove_filepos,
	po_message_add_filepos.

2005-02-10  Bruno Haible  <bruno@clisp.org>

	* windows/gettextpo.def: Add po_message_set_extracted_comments.

2005-02-07  Bruno Haible  <bruno@clisp.org>

	* windows/gettextlib.def: Add c_strcasecmp, c_strncasecmp.

2005-01-08  Bruno Haible  <bruno@clisp.org>

	* libgrep: New subdirectory.
	* configure.ac: Invoke gt_LIBGREP. Declare libgrep/Makefile.am.
	* Makefile.am (SUBDIRS): Add libgrep.
	(config.h_vms, config.h.msvc): Define HAVE_DECL_STRDUP, HAVE_MEMCHR,
	restrict.
	* Makefile.msvc: Recurse into libgrep as well.
	* Makefile.vms: Likewise.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_STRCASE. Don't test for strcasecmp and
	strncasecmp here.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_FUNC_STPNCPY.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_ERROR instead of gt_FUNC_ERROR_AT_LINE.
	* Makefile.am (config.h_vms, config.h.msvc): Remove setting of
	HAVE_DECL_STRERROR.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_QUOTE.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_EXITFAIL.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_GETOPT.
	* Makefile.am (config.h_vms, config.h.msvc): Define __GETOPT_PREFIX
	to empty.
	* Makefile.msvc: Update.
	* Makefile.vms: Update.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms, config.h.msvc): Define HAVE_WMEMCHR and
	HAVE_WMEMCPY to 1.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms, config.h.msvc): Define USE_UNLOCKED_IO
	to 1.

2005-01-05  Bruno Haible  <bruno@clisp.org>

	* windows/gettextlib.rc: Update copyright year.
	* windows/gettextsrc.rc: Likewise.
	* windows/gettextpo.rc: Likewise.

2004-12-10  Bruno Haible  <bruno@clisp.org>
